--- a/src/client/components/League/style.css
+++ b/src/client/components/League/style.css
@@ -34,6 +34,11 @@ input:-webkit-autofill {
 #createLeague {
   width: 100%; }
 
+#league_wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
 .form {
   height: 100%;
   display: inline; }
